--- a/stackOv/index.html
+++ b/stackOv/index.html
@@ -15,6 +15,7 @@
             <li>Community</li>
             <li>Heated Questions</li>
             <li>Forums</li>
+            <li><button type="button" value="Sign in" name="sign-in-button"></button></li>
         </ul>
     </header><!-- /header -->
 </body>
