[Feature #162588667] Add stylesheet for index page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li>Community</li>
             <li>Heated Questions</li>
             <li>Forums</li>
-            <li><button type="button" value="Sign in" name="sign-in-button"></button></li>
+            <li><button type="button" name="sign-in-button">Sign in</button></li>
         </ul>
     </header><!-- /header -->
 </body>
