[Feature #162588667] Create the navigation bar

--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
     
     <header id="header" class="header-stat">
         <ul>
-            <li><img class="img-logo" src="static/images/logo" alt="logo"></li>
-            <li>Community</li>
-            <li>Heated Questions</li>
-            <li>Forums</li>
-            <li><button type="button" name="sign-in-button">Sign in</button></li>
+            <li>
+                <a href="#"><img class="img-logo" src="static/images/logo" alt="logo"></a>
+            </li>
+            <li><a href="#">Community</a></li>
+            <li><a href="#">Heated Questions</a></li>
+            <li><a href="#">Forums</a></li>
+            <li>
+                <button type="button" name="sign-in-button"><a href="#">Sign in</a></button>
+            </li>
         </ul>
     </header><!-- /header -->
 </body>
