--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
     
     <header id="header" class="header-stat">
         <ul>
-            <li>
-                <a href="#"><img class="img-logo" src="static/images/logo" alt="logo"></a>
-            </li>
-            <li><a href="#">Community</a></li>
-            <li><a href="#">Heated Questions</a></li>
-            <li><a href="#">Forums</a></li>
-            <li>
-                <button type="button" name="sign-in-button"><a href="#">Sign in</a></button>
-            </li>
+            <div class="img-logo">
+
+                <li>
+                    <a href="#"><img src="images/logoe" alt="logo"></a>
+                </li></div>
+            <div class=nav-nav>        
+                <li><a href="#">Community</a></li>
+                <li><a href="#">Heated Questions</a></li>
+                <li><a href="#">Forums</a></li>
+                <li>
+                    <button type="button" name="sign-in-button"><a href="#">Sign in</a></button>
+                </li>
+            </div>    
         </ul>
     </header><!-- /header -->
 </body>
