[Feature #162588667] Style account login action button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#">Heated Questions</a></li>
                 <li><a href="#">Forums</a></li>
                 <li>
-                    <button type="button" name="sign-in-button"><a href="#">Sign in</a></button>
+                    <button id="sign" type="button" name="sign-in-button"><a href="#">Sign in</a></button>
                 </li>
             </div>    
         </ul>
