--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#">Heated Questions</a></li>
                 <li><a href="#">Forums</a></li>
                 <li>
-                    <button id="sign" type="button" name="sign-in-button"><a href="#">Sign in</a></button>
+                    <a id= "sign-in" href="#">Sign in</a>
                 </li>
             </div>    
         </ul>
