--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Stack S</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/png" href="images/fav.jpg"/>
+    <meta name="theme-color" content="#999999" />
 </head>
 <body>
     
@@ -26,5 +28,11 @@
             </div>    
         </ul>
     </header><!-- /header -->
+
+    <div id="head-wrapper">
+        <div class="search">
+            <input type="search" name="search" placeholder="Search Questions">
+        </div>
+    </div>
 </body>
 </html>
