[Feature #162588667] Create Call to action element

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 <body>
     
     <header id="header" class="header-stat">
+        <div class="header-text">
+            
+                <div class="left-stat"><h2>Stack Ov</h2>
+                    <br>
+                    <span id="left-tag"><i>Purely</i><br>
+                    Human Beings</span>
+            </div>
+
+            <div class="right-stat">
+                <h3>Asking <em>Questions</em> is <span class="big">fun</span></h3>
+                <h4 id="middle-line">Giving <em>Answers</em> is <span class="big">more Fun</span></h4>
+                <h4>Even <span class="big">better?</span> We let you decide that yourself</h4>
+        </div>
+        </div>
         <ul>
             <div class="img-logo">
 
