[Feature #162588667] Add sticky header to page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     
-    <header id="header" class="header-stat">
         <div class="header-text">
             
                 <div class="left-stat"><h2>Stack Ov</h2>
@@ -26,6 +25,7 @@
                 <h4>Even <span class="big">better?</span> We let you decide that yourself</h4>
         </div>
         </div>
+    <header id="header" class="header-stat">
         <ul>
             <div class="img-logo">
 
@@ -33,7 +33,7 @@
                     <a href="#"><img src="images/logoe" alt="logo"></a>
                 </li></div>
             <div class=nav-nav>        
-                <li><a href="#">Community</a></li>
+                <li><a class="active" href="#">Community</a></li>
                 <li><a href="#">Heated Questions</a></li>
                 <li><a href="#">Forums</a></li>
                 <li>
@@ -47,6 +47,13 @@
         <div class="search">
             <input type="search" name="search" placeholder="Search Questions">
         </div>
+    </div>
+
+    <div class="container">
+        <div class="contents">
+            thisdvfgfhgfmdfgndvc
+        </div>
+
     </div>
 </body>
 </html>
