[Feature #162588667] Display each question in a card

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         <div class="centre-pane">
             <div class="qcard">
                 <div class="qtext">
-                    
+                    <p>In cum dicit labore gloriatur. Sit eu facer eloquentiam disputationi, est ut possim ullamcorper, id velit similique quo. Vide tincidunt reprimique et vim, te his alii conclusionemque. Ei eos augue detracto abhorreant... </p>
                 </div>
                 <div class="qicons">
-                    
+                    gf
                 </div>
             </div>
         </div>        
