[Feature #162588667] Insert tags in question display area

--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
                     <p>In cum dicit labore gloriatur. Sit eu facer eloquentiam disputationi, est ut possim ullamcorper, id velit similique quo. Vide tincidunt reprimique et vim, te his alii conclusionemque. Ei eos augue detracto abhorreant... <a class="after-p" href="#"></a></p>
                 </div>
                 <div class="qicons">
-                    gf
+                    
+                        <p class="qtags">tag b</p>
+                        <p class="qtags">tag a</p>
+                    <p>gf</p>
                 </div>
             </div>
         </div>        
