[Feature #162588667] Ouline time count

--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
                     <p>In cum dicit labore gloriatur. Sit eu facer eloquentiam disputationi, est ut possim ullamcorper, id velit similique quo. Vide tincidunt reprimique et vim, te his alii conclusionemque. Ei eos augue detracto abhorreant... <a class="after-p" href="#"></a></p>
                 </div>
                 <div class="qicons">
-                    
-                        <p class="qtags">tag b</p>
-                        <p class="qtags">tag a</p>
-                    <p>gf</p>
+                    <p class="qtags">tag b</p>
+                    <p class="qtags">tag a</p>
+                    <p>&#128483 43</p>
+                    <p class="right-tag">Accessed 3 minutes ago</p>
+
                 </div>
             </div>
         </div>        
