[Feature #162588667] Complete on styling on side and question margins

--- a/index.html
+++ b/index.html
@@ -75,6 +75,42 @@
 
                 </div>
             </div>
+             <div class="qcard">
+                <div class="qtext">
+                    <p>In cum dicit labore gloriatur. Sit eu facer eloquentiam disputationi, est ut possim ullamcorper, id velit similique quo. Vide tincidunt reprimique et vim, te his alii conclusionemque. Ei eos augue detracto abhorreant... <a class="after-p" href="#"></a></p>
+                </div>
+                <div class="qicons">
+                    <p class="qtags">tag b</p>
+                    <p class="qtags">tag a</p>
+                    <p>&#128483 43</p>
+                    <p class="right-tag">Accessed 3 minutes ago</p>
+
+                </div>
+            </div>
+             <div class="qcard">
+                <div class="qtext">
+                    <p>In cum dicit labore gloriatur. Sit eu facer eloquentiam disputationi, est ut possim ullamcorper, id velit similique quo. Vide tincidunt reprimique et vim, te his alii conclusionemque. Ei eos augue detracto abhorreant... <a class="after-p" href="#"></a></p>
+                </div>
+                <div class="qicons">
+                    <p class="qtags">tag b</p>
+                    <p class="qtags">tag a</p>
+                    <p>&#128483 43</p>
+                    <p class="right-tag">Accessed 3 minutes ago</p>
+
+                </div>
+            </div>
+             <div class="qcard">
+                <div class="qtext">
+                    <p>In cum dicit labore gloriatur. Sit eu facer eloquentiam disputationi, est ut possim ullamcorper, id velit similique quo. Vide tincidunt reprimique et vim, te his alii conclusionemque. Ei eos augue detracto abhorreant... <a class="after-p" href="#"></a></p>
+                </div>
+                <div class="qicons">
+                    <p class="qtags">tag b</p>
+                    <p class="qtags">tag a</p>
+                    <p>&#128483 43</p>
+                    <p class="right-tag">Accessed 4 hours ago</p>
+
+                </div>
+            </div>
         </div>        
         <div class="contents-right sides">
             <h4>Questions to interest you</h4>
