--- a/index.html
+++ b/index.html
@@ -126,5 +126,12 @@
         </div>
 
     </div>
+    <footer>
+        <p class="footer-text">As always, good questions askers get a cookie.
+        Noo, I don't mean one - it's a month's supply</p>
+            <div id="copywright">
+                <p>&#169 <span class="copyw">2018</span></p>
+            </div>    
+    </footer>
 </body>
 </html>
