[Feature #162588667] Fit contents to wide screen

--- a/index.html
+++ b/index.html
@@ -111,6 +111,30 @@
 
                 </div>
             </div>
+             <div class="qcard">
+                <div class="qtext">
+                    <p>In cum dicit labore gloriatur. Sit eu facer eloquentiam disputationi, est ut possim ullamcorper, id velit similique quo. Vide tincidunt reprimique et vim, te his alii conclusionemque. Ei eos augue detracto abhorreant... <a class="after-p" href="#"></a></p>
+                </div>
+                <div class="qicons">
+                    <p class="qtags">tag b</p>
+                    <p class="qtags">tag a</p>
+                    <p>&#128483 43</p>
+                    <p class="right-tag">Accessed 4 hours ago</p>
+
+                </div>
+            </div>
+            <div class="qcard">
+                <div class="qtext">
+                    <p>In cum dicit labore gloriatur. Sit eu facer eloquentiam disputationi, est ut possim ullamcorper, id velit similique quo. Vide tincidunt reprimique et vim, te his alii conclusionemque. Ei eos augue detracto abhorreant... <a class="after-p" href="#"></a></p>
+                </div>
+                <div class="qicons">
+                    <p class="qtags">tag b</p>
+                    <p class="qtags">tag a</p>
+                    <p>&#128483 43</p>
+                    <p class="right-tag">Accessed 4 hours ago</p>
+
+                </div>
+            </div>
         </div>        
         <div class="contents-right sides">
             <h4>Questions to interest you</h4>
@@ -124,7 +148,9 @@
                 <p><a href="#">A somewhat abnormal question title</a>&#10115&#10119&#10119</p>
             </div>
         </div>
-
+        <div class="qbutton-scroll">
+            <a class="scroll-load-more" href="#" title="It's good manners to obey. Just scroll &#128524">Scroll to Load More </a>
+        </div>
     </div>
     <footer>
         <p class="footer-text">As always, good questions askers get a cookie.
