[Finishes #162588667] Fit to smaller screens

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
             <div class="right-text">
                 <p><a href="#">A relatively normal question title</a> &#10117&#10115</p>
                 <p><a href="#">I'm a question title. It's okay to click on me</a> &#10118&#10119&#10113</p>
-                <p><a href="#">I'm a question too, but being clicked is not my thing</a>&#128293</p>
-                <p><a href="#">A relatively normal question title</a>&#10119&#10119</p>
-                <p><a href="#">A somewhat abnormal question title</a>&#10119&#10114</p>
-                <p><a href="#">A somewhat abnormal question title</a>&#10115&#10119&#10119</p>
+                <p class="extra"><a href="#">I'm a question too, but being clicked is not my thing</a>&#128293</p>
+                <p class="extra"><a href="#">A relatively normal question title</a>&#10119&#10119</p>
+                <p class="extra"><a href="#">A somewhat abnormal question title</a>&#10119&#10114</p>
+                <p class="extra"><a href="#">A somewhat abnormal question title</a>&#10115&#10119&#10119</p>
             </div>
         </div>
         <div class="qbutton-scroll">
